Fix stars not covering mobile... again

--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@ body {
   font-size: 18px;
   font-family: "Oxygen";
   line-height: 1.4;
-  width: max(100vw, fit-content);
+  min-width: fit-content;
 }
 
 .content > * {
